k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: techcorp-deployment
  labels:
    app: techcorp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: techcorp
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: techcorp
    spec:
      containers:
      - name: techcorp
        image: gcr.io/my-docker-project-491221/techcorp:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "250m"
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 20
